[gd_scene load_steps=9 format=3 uid="uid://4wtgmt2halt6"]

[ext_resource type="Script" path="res://scenes/scripts/GameMainScene.gd" id="1_1ubmi"]
[ext_resource type="Texture2D" uid="uid://bb0tduqwwehl1" path="res://resources/pexels-mdsnmdsnmdsn-1831234.jpg" id="2_aghc3"]
[ext_resource type="Texture2D" uid="uid://dcdvt3umvu6ew" path="res://resources/UI/PNG/Blue/Default/button_rectangle_border.png" id="3_e8sl5"]
[ext_resource type="Texture2D" uid="uid://bt4rqd6ji6fer" path="res://resources/UI/PNG/Blue/Double/check_square_grey_checkmark.png" id="5_tqxm7"]
[ext_resource type="Texture2D" uid="uid://b22fuv3k1m2xn" path="res://resources/UI/PNG/Blue/Double/check_square_color_cross.png" id="6_egynt"]

[sub_resource type="SystemFont" id="SystemFont_37hwv"]

[sub_resource type="SystemFont" id="SystemFont_8gwut"]

[sub_resource type="SystemFont" id="SystemFont_4spxb"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ubmi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_aghc3")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 80

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = SubResource("SystemFont_37hwv")
theme_override_font_sizes/font_size = 120
text = "BLOSSOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameButtons"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_8gwut")
icon = ExtResource("3_e8sl5")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_4spxb")
theme_override_font_sizes/font_size = 20
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeckButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_8gwut")
icon = ExtResource("3_e8sl5")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/DeckButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_4spxb")
theme_override_font_sizes/font_size = 20
text = "DECK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_8gwut")
icon = ExtResource("3_e8sl5")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/ShopButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_4spxb")
theme_override_font_sizes/font_size = 20
text = "SHOP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/OptionButtons"]
layout_mode = 2
icon = ExtResource("5_tqxm7")
flat = true

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/OptionButtons"]
layout_mode = 2
icon = ExtResource("6_egynt")
flat = true

[connection signal="button_down" from="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/OptionButtons/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/GameButtons/VBoxContainer/OptionButtons/ExitButton" to="." method="_on_exit_button_button_down"]
